--- a/pictures.html
+++ b/pictures.html
@@ -81,7 +81,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/baja9.jpg">
-      <img style="background-image:url('images/baja9.jpg');">
+      <img style="background-image:url('images/baja9.JPG');">
     </a>
     <div class="desc"><i>Ficus petiolaris</i></div>
   </div>
@@ -90,7 +90,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/baja10.jpg" alt="...">
-      <img style="background-image:url('images/baja10.jpg');">
+      <img style="background-image:url('images/baja10.JPG');">
     </a>
     <div class="desc">Asynchronous flowering</div>
   </div>
@@ -108,7 +108,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/baja12.jpg" alt="...">
-      <img style="background-image:url('images/baja12.jpg');">
+      <img style="background-image:url('images/baja12.JPG');">
     </a>
     <div class="desc">Moth larva eating figs</div>
   </div>
@@ -126,7 +126,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/baja16.jpg" alt="...">
-      <img style="background-image:url('images/baja16.jpg');">
+      <img style="background-image:url('images/baja16.JPG');">
     </a>
     <div class="desc">Improvised lab</div>
   </div>
@@ -154,7 +154,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/baja13.jpg" alt="...">
-      <img style="background-image:url('images/baja13.jpg');">
+      <img style="background-image:url('images/baja13.JPG');">
     </a>
     <div class="desc">Derek at site 113</div>
   </div>
@@ -201,7 +201,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/baja19.jpg" alt="...">
-      <img style="background-image:url('images/baja19.jpg');">
+      <img style="background-image:url('images/baja19.JPG');">
     </a>
     <div class="desc">Field camp at site 113</div>
   </div>
@@ -210,7 +210,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/baja21.jpg" alt="...">
-      <img style="background-image:url('images/baja21.jpg');">
+      <img style="background-image:url('images/baja21.JPG');">
     </a>
     <div class="desc">The Nason mobile</div>
   </div>
@@ -220,7 +220,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/baja23.jpg" alt="...">
-      <img style="background-image:url('images/baja23.jpg');">
+      <img style="background-image:url('images/baja23.JPG');">
     </a>
     <div class="desc">Sanctuary and <em>F. petiolaris</em></div>
   </div>
@@ -240,7 +240,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/main2.jpg">
-      <img style="background-image:url('images/main2.jpg');">
+      <img style="background-image:url('images/main2.JPG');">
     </a>
     <div class="desc">John in the herbarium</div>
   </div>
@@ -257,7 +257,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/main4.jpg">
-      <img style="background-image:url('images/main4.jpg');">
+      <img style="background-image:url('images/main4.JPG');">
     </a>
     <div class="desc">Pressing specimens</div>
   </div>
@@ -266,7 +266,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/main5.jpg">
-      <img style="background-image:url('images/main5.jpg');">
+      <img style="background-image:url('images/main5.JPG');">
     </a>
     <div class="desc">Lost in Sonora</div>
   </div>
@@ -275,7 +275,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/main6.jpg">
-      <img style="background-image:url('images/main6.jpg');">
+      <img style="background-image:url('images/main6.JPG');">
     </a>
     <div class="desc">Kevin in Sonora</div>
   </div>
@@ -318,7 +318,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/main11.jpg">
-      <img style="background-image:url('images/main11.jpg');">
+      <img style="background-image:url('images/main11.JPG');">
     </a>
     <div class="desc">Jalisco</div>
   </div>
@@ -338,7 +338,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/reu1.jpg">
-      <img style="background-image:url('images/reu1.jpg');">
+      <img style="background-image:url('images/reu1.JPG');">
     </a>
     <div class="desc">Looking for orchids</div>
   </div>
@@ -347,7 +347,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/reu2.jpg">
-      <img style="background-image:url('images/reu2.jpg');">
+      <img style="background-image:url('images/reu2.JPG');">
     </a>
     <div class="desc">Climbing for orchids</div>
   </div>
@@ -356,7 +356,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/reu3.jpg">
-      <img style="background-image:url('images/reu3.jpg');">
+      <img style="background-image:url('images/reu3.JPG');">
     </a>
     <div class="desc">Collecting orchids</div>
   </div>
@@ -374,7 +374,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/reu5.jpg">
-      <img style="background-image:url('images/reu5.jpg');">
+      <img style="background-image:url('images/reu5.JPG');">
     </a>
     <div class="desc">Florent and Cécile</div>
   </div>
@@ -383,7 +383,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/reu6.jpg">
-      <img style="background-image:url('images/reu6.jpg');">
+      <img style="background-image:url('images/reu6.j');">
     </a>
     <div class="desc">Fungal peletons in roots</div>
   </div>
@@ -392,7 +392,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/reu7.jpg">
-      <img style="background-image:url('images/reu7.jpg');">
+      <img style="background-image:url('images/reu7.JPG');">
     </a>
     <div class="desc">Isolation of endophytes</div>
   </div>
@@ -401,7 +401,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/reu8.jpg">
-      <img style="background-image:url('images/reu8.jpg');">
+      <img style="background-image:url('images/reu8.JPG');">
     </a>
     <div class="desc">Fungal culture</div>
   </div>
@@ -410,7 +410,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/reu9.jpg">
-      <img style="background-image:url('images/reu9.jpg');">
+      <img style="background-image:url('images/reu9.JPG');">
     </a>
     <div class="desc">Orchid specimen</div>
   </div>
@@ -419,7 +419,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/reu10.jpg">
-      <img style="background-image:url('images/reu10.jpg');">
+      <img style="background-image:url('images/reu10.JPG');">
     </a>
     <div class="desc">La Roche Écrite</div>
   </div>
@@ -428,7 +428,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/reu11.jpg">
-      <img style="background-image:url('images/reu11.jpg');">
+      <img style="background-image:url('images/reu11.JPG');">
     </a>
     <div class="desc">Mascarin botanical garden</div>
   </div>
@@ -437,7 +437,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/reu12.jpg">
-      <img style="background-image:url('images/reu12.jpg');">
+      <img style="background-image:url('images/reu12.JPG');">
     </a>
     <div class="desc">La Réunion's peak</div>
   </div>
@@ -538,7 +538,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="images/other13.jpg">
-      <img style="background-image:url('images/other13.jpg');">
+      <img style="background-image:url('images/other13.JPG');">
     </a>
     <div class="desc">CNRS 2012</div>
   </div>
