--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
 						   <a href="https://umr-pvbmt.cirad.fr/" target="_blank">PVBMT | CIRAD</a> </p>
 						<h3> People </h3>
 						    <p><a href="https://www.eeob.iastate.edu/people/john-nason" target="_blank">Dr. John Nason</a> <br /> 
-								<a href="https://www.western.edu/people/derek-d-houston-phd" target="_blank">Dr. Derek Houston</a> <br />
+								<a href="https://derekdhouston.wordpress.com/" target="_blank">Dr. Derek Houston</a> <br />
 								<a href="https://www.eeob.iastate.edu/people/lynn-clark" target="_blank">Dr. Lynn Clark</a> <br />
 								<a href="https://www.cefe.cnrs.fr/fr/recherche/ines/ibt/889-c/265-rumsais-blatrix" target="_blank">Dr. Rumsais Blatrix</a> <br /> 
 								<a href="https://www.cefe.cnrs.fr/fr/recherche/ines/ibc/1062-ec/248-doyle-mckey" target="_blank">Dr. Doyle McKey</a> <br /> 
