--- a/pictures.html
+++ b/pictures.html
@@ -103,7 +103,7 @@
     <a target="_blank" href="images/baja5.jpg">
       <img style="background-image:url('images/baja5.jpg');">
     </a>
-    <div class="desc">Collecting wasp</div>
+    <div class="desc">Collecting wasps</div>
   </div>				
 
   <div class="gallery">
@@ -138,7 +138,7 @@
     <a target="_blank" href="images/baja6.jpg">
       <img style="background-image:url('images/baja6.jpg');">
     </a>
-    <div class="desc">Tall castus site 158</div>
+    <div class="desc">Tall cactus site 158</div>
   </div>
 															
   <div class="gallery">
@@ -247,7 +247,7 @@
     <a target="_blank" href="images/main9.jpg">
       <img style="background-image:url('images/main9.jpg');">
     </a>
-    <div class="desc">The cuttest fig tree</div>
+    <div class="desc">The cutest fig tree</div>
   </div>
 
   <div class="gallery">
